implemented CRUD for /performers, added db migration to add foreign kes to the junction tables, refactored code to move controller to individual files instead of concentrating in MKHttpServer.kt
